Bug 287056 - Duplicate op doesn't remove outline form the screen
Summary: Duplicate op doesn't remove outline form the screen
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Tools (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR normal
Target Milestone: ---
Assignee: Krita Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-20 10:25 UTC by Dmitry Kazakov
Modified: 2011-11-20 15:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot (320.44 KB, image/png)
2011-11-20 10:25 UTC, Dmitry Kazakov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dmitry Kazakov 2011-11-20 10:25:59 UTC
Created attachment 65865 [details]
Screenshot

The parts of the outline are left on the screen when painting.
Comment 1 Dmitry Kazakov 2011-11-20 15:05:47 UTC
Git commit aaa26cde4732e829eead9931b5b24aa708b240d2 by Dmitry Kazakov.
Committed on 20/11/2011 at 14:48.
Pushed by dkazakov into branch 'master'.

Fixed updates of the outline of the duplicate paintop

We do not paint outline when it is disabled in the config

BUG:287056

M  +2    -8    krita/plugins/paintops/defaultpaintops/duplicate/kis_duplicateop_settings.cpp

http://commits.kde.org/calligra/aaa26cde4732e829eead9931b5b24aa708b240d2