Fixed updates of the outline of the duplicate paintop

We do not paint outline when it is disabled in the config

BUG:287056